<resources>
    <string name="app_name">Foody</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="intro_page">intro page</string>
    <string name="intro_image">intro image</string>
    <string name="get_started">Get started</string>
    <string name="foody">Foody</string>
    <string name="donut">donut</string>
    <string name="login">LOGIN</string>
    <string name="email_input_field">email input field</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="or_">OR</string>
    <string name="google">google</string>
    <string name="facebook">facebook</string>
    <string name="don_t_have_an_account">Don\'t have an account?\t</string>
    <string name="register_now">Register now</string>
    <string name="log_in_with">Log in with</string>
    <string name="burger_image">burger image</string>
    <string name="sign_up">SIGN UP</string>
    <string name="signup">SignUp</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">\tLog in</string>
    <string name="web_client_id">849237981346-nbjiqnkfr3id4ll95mjhv0ttl477tue6.apps.googleusercontent.com</string>
    <string name="password_dialog_title">Your password must include:</string>
    <string name="password_requirements">-At least one uppercase letter (A–Z)\n-At least one lowercase letter (a–z)\n-At least one digit (0–9)\n-At least one special character (@#$%^&amp;+=)\n-Minimum length of 4 characters</string>
    <string name="ok">OK</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>