<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".loginpage.LoginScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

            <ImageView
                android:layout_width="219dp"
                android:layout_height="191dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/donut"
                android:scaleType="fitCenter"
                android:src="@drawable/donut" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="28dp"
                android:fontFamily="@font/days_one"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/baseline_mail_outline_24"
                app:startIconTint="@color/poppy"
                style="@style/CustomEditTextStyle"
                android:hint="@string/email"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                app:startIconDrawable="@drawable/baseline_lock_24"
                app:startIconTint="@color/poppy"
                style="@style/CustomEditTextStyle"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgot_pass_btn"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginVertical="15dp"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="16sp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:background="@drawable/login_custom_btn"
                android:fontFamily="@font/varela_round"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:elevation="8dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/or_"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="39dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in_with"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="16sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >

                <ImageView
                    android:id="@+id/google_btn"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:padding="13dp"
                    android:src="@drawable/google"
                    android:focusable="true"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/google"
                    android:foreground="@drawable/login_img_outer_line"
                    android:layout_marginEnd="25dp"
                    />

                <ImageView
                    android:id="@+id/fb_btn"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:padding="13dp"
                    android:src="@drawable/fb"
                    android:focusable="true"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground"
                    android:foreground="@drawable/login_img_outer_line"
                    android:contentDescription="@string/facebook"
                    />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="27dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />

                <TextView
                    android:id="@+id/register_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_now"
                    android:textColor="@color/crimson"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

   <ProgressBar
       android:id="@+id/login_progress"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:visibility="gone"
       />


</FrameLayout>