<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginpage.SignUpScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/burger"
                android:layout_width="237dp"
                android:layout_height="228dp"
                android:scaleType="fitCenter"
                android:layout_marginTop="37dp"
                android:src="@drawable/burger"
                android:contentDescription="@string/burger_image"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="28dp"
                android:fontFamily="@font/days_one"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/baseline_person_outline_24"
                app:startIconTint="@color/poppy"
                style="@style/CustomEditTextStyle"
                android:hint="@string/name"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                app:startIconDrawable="@drawable/baseline_mail_outline_24"
                app:startIconTint="@color/poppy"
                style="@style/CustomEditTextStyle"
                android:hint="@string/email"
                app:boxStrokeErrorColor="@color/design_default_color_error"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                app:startIconDrawable="@drawable/baseline_lock_24"
                app:startIconTint="@color/poppy"
                style="@style/CustomEditTextStyle"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                app:startIconDrawable="@drawable/baseline_lock_24"
                app:startIconTint="@color/poppy"
                style="@style/CustomEditTextStyle"
                android:hint="@string/confirm_password"
                app:passwordToggleEnabled="true"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup_btn"
                android:layout_width="340dp"
                android:layout_height="48dp"
                android:background="@drawable/login_custom_btn"
                android:fontFamily="@font/varela_round"
                android:layout_marginTop="52dp"
                android:textAllCaps="false"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:elevation="8dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:layout_marginBottom="27dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />

                <TextView
                    android:id="@+id/login_back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in"
                    android:textColor="@color/crimson"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/signup_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        />

</FrameLayout>