<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboardingscreen.IntroScreen">

    <Button
        android:id="@+id/skip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        style="@style/ButtonTextTheme"
        android:text="@string/skip"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="100dp"
        android:contentDescription="@string/intro_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.885" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/get_started_btn"
        android:background="@drawable/btn_gradient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:textColor="@color/white"
        android:visibility="gone"
        android:textSize="17sp"
        android:text="@string/get_started"
        app:layout_constraintTop_toBottomOf="@id/view_pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/intro_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tabBackground="@drawable/tab_selector"
        app:tabIndicatorHeight="0dp"
        app:tabGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_pager"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ButtonTextTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableEnd="@drawable/baseline_arrow_forward_24"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/next"
        />




</androidx.constraintlayout.widget.ConstraintLayout>